--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,10 @@
     "useDefineForClassFields": true,
     "allowImportingTsExtensions": true
   },
-  "include": ["docs", "theme", "rspress.config.ts"],
+  "include": [
+    "docs", "theme",
+    "rspress.config.ts"
+  ],
   "mdx": {
     "checkMdx": true
   }
