--- a/.drone.yml
+++ b/.drone.yml
@@ -34,7 +34,7 @@ steps:
       BUCKET_NAME:
         from_secret: bucketName
       target: price_action
-      source: ./dist
+      source: ./doc_build
   - name: deploy
     image: appleboy/drone-scp
     depends_on: [build]
